# atta

./: .clang-format  .gitignore  .gitmodules  AttaConfig.cmake  AttaConfig.cmake.in  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  VulkanTest  attaConfig.cmake.in  build.sh  build_android.sh  debug.sh  imgui.ini  install.sh  install_android.sh  install_linux.sh  run.sh
docs/: CMakeLists.txt  Doxyfile.in  extra-dark-toggle.css  extra-darkmode-toggle.js  extra-sidebar-only.css  extra.css  gettingStarted.md  header.html  installation.md  overview.md  references.md  systemsOverview.md
examples/tutorials/material-resource/: CMakeLists.txt  README.md  material-resource.atta
examples/tutorials/simple-script/: CMakeLists.txt  README.md  simple-script.atta
src/: .buffer.cpp.swp  .main.cpp.swp  CMakeLists.txt  CMakeListss.txt  attamain.cpp  buffer.h  commandBuffers.cpp  commandBuffers.h  commandPool.h  depthBuffer.cpp  deviceMemory.cpp  deviceMemory.h  image.cpp  image.h  imageView.cpp  instance.cpp  instance.h  main.cpp  simulator.cpp  simulator.h  surface.h  swapChain.cpp  swapChain.h  window.cpp  window.h
src/assets/: cornellBox.cpp  cornellBox.h  material.h  model.cpp  model.h  procedural.h  scene.cpp  scene.h  sphere.h  texture.cpp  texture.h  textureImage.cpp  textureImage.h  uniformBuffer.cpp  uniformBuffer.h  vertex.h
src/atta/: CMakeLists.txt  atta.cpp  atta.h  cmakeConfig.h  cmakeConfig.h.in  pch.h  project.cpp
src/atta/RosPlugin/: package.xml
src/atta/algorithms/: CMakeLists.txt
src/atta/component/: CMakeLists.txt  base.h  componentManager.cpp  componentManager.h  componentManager.inl  componentRegistry.cpp  componentRegistry.h  componentRegistry.inl  entity.cpp  entity.h  entity.inl  factory.cpp  factory.h  factory.inl  interface.cpp  interface.h  manager.cpp  manager.h  manager.inl  typedComponentRegistry.cpp  typedComponentRegistry.h  typedComponentRegistry.inl
src/atta/componentSystem/: CMakeLists.txt  base.h  componentManager.cpp  componentManager.h  componentManager.inl  componentRegistry.cpp  componentRegistry.h  componentRegistry.inl  entity.cpp  entity.h  factory.cpp  factory.h  factory.inl  typedComponentRegistry.cpp  typedComponentRegistry.h  typedComponentRegistry.inl
src/atta/core/: CMakeLists.txt  accelerator.cpp  assert.h  common.cpp  config.h  log.cpp  log.h  log.inl  robot.cpp  scene.cpp  stringId.cpp  stringId.h  stringId.inl  window.cpp  window.h
src/atta/entityComponentSystem/: ecManager.h
src/atta/event/: CMakeLists.txt  event.cpp  event.h  eventManager.cpp  eventManager.h  interface.cpp  interface.h  manager.cpp  manager.h
src/atta/eventSystem/: CMakeLists.txt  dispatcher.cpp  dispatcher.h  event.cpp  event.h  eventDispatcher.cpp  eventDispatcher.h  eventManager.cpp  eventManager.h
src/atta/file/: CMakeLists.txt  fileManager.cpp  fileManager.h  interface.cpp  interface.h  interface.inl  manager.cpp  manager.h
src/atta/fileSystem/: CMakeLists.txt  fileManager.cpp  fileManager.h
src/atta/graphics/: CMakeLists.txt  base.h  bufferLayout.cpp  bufferLayout.h  drawer.cpp  drawer.h  drawer.inl  framebuffer.cpp  framebuffer.h  graphicsManager.cpp  graphicsManager.h  graphicsManager.inl  image.cpp  image.h  indexBuffer.cpp  indexBuffer.h  interface.cpp  interface.h  manager.cpp  manager.h  manager.inl  mesh.cpp  mesh.h  pipeline.cpp  pipeline.h  renderPass.cpp  renderPass.h  renderQueue.cpp  renderQueue.h  rendererAPI.cpp  rendererAPI.h  shader.cpp  shader.h  shaderGroup.cpp  shaderGroup.h  shaderUniform.cpp  shaderUniform.h  vertexBuffer.cpp  vertexBuffer.h  viewport.cpp  (+1 more)
src/atta/graphicsSystem/: CMakeLists.txt  base.h  drawer.cpp  drawer.h  drawer.inl  framebuffer.cpp  framebuffer.h  graphicsManager.cpp  graphicsManager.h  graphicsManager.inl  image.cpp  image.h  indexBuffer.cpp  indexBuffer.h  pipeline.cpp  pipeline.h  renderPass.cpp  renderPass.h  rendererAPI.cpp  rendererAPI.h  shader.cpp  shader.h  shaderGroup.cpp  shaderGroup.h  shaderUniform.cpp  shaderUniform.h  texture.h  vertexBuffer.cpp  vertexBuffer.h  viewport.cpp  viewport.h  window.cpp  window.h
src/atta/helpers/: drawer.cpp  evaluator.cpp  log.cpp
src/atta/io/: CMakeLists.txt  interface.cpp  interface.h  ioManager.cpp  ioManager.h  ioManager.inl  manager.cpp  manager.h  manager.inl
src/atta/ioSystem/: CMakeLists.txt  ioManager.cpp  ioManager.h  ioManager.inl
src/atta/math/: bounds.cpp  common.cpp  matrix.cpp  point.cpp  quaternion.cpp  ray.cpp  vector.cpp
src/atta/memory/: CMakeLists.txt  allocatedObject.cpp  allocatedObject.h  allocatedObject.inl  allocator.cpp  allocator.h  interface.cpp  interface.h  manager.cpp  manager.h  manager.inl  memoryManager.cpp  memoryManager.h  memoryManager.inl
src/atta/memorySystem/: CMakeLists.txt  allocatedObject.cpp  allocatedObject.h  allocatedObject.inl  allocator.cpp  allocator.h  memoryManager.cpp  memoryManager.h  memoryManager.inl
src/atta/objects/: object.cpp
src/atta/parallel/: CMakeLists.txt  barrier.cpp  interface.cpp  interface.h  interface.inl  manager.cpp  manager.h  (+5 more)
src/examples/: CMakeLists.txt  examples.h
src/examplesOld/: examples.h
src/shaders/: CMakeLists.txt  frag.spv  light.glsl  material.glsl  objectInfo.glsl  shader.frag  shader.vert  uniformBufferObject.glsl  vert.spv
src/simulator/: atta.cpp  atta.h  object.cpp  object.h  project.cpp  scene.cpp  scene.h  simulator.cpp  simulator.h
src/vulkan/: buffer.cpp  buffer.h  camera.cpp  camera.h  commandBuffers.cpp  commandPool.cpp  debugUtilsMessenger.cpp  debugUtilsMessenger.h  depthBuffer.h  descriptorBinding.h  descriptorPool.cpp  descriptorPool.h  descriptorSetLayout.cpp  descriptorSetLayout.h  descriptorSetManager.cpp  descriptorSetManager.h  descriptorSets.cpp  descriptorSets.h  device.cpp  device.h  deviceMemory.cpp  deviceMemory.h  fence.cpp  fence.h  frameBuffer.cpp  frameBuffer.h  graphicsPipeline.cpp  graphicsPipeline.h  image.cpp  image.h  imageView.h  instance.cpp  instance.h  physicalDevice.cpp  physicalDevice.h  pipelineLayout.cpp  pipelineLayout.h  renderPass.cpp  renderPass.h  sampler.cpp  (+16 more)
(+2373 files in other folders)
